add pizza image on the first div

--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body{
     background-image: url("images/dark2.jpg");
-    height: auto;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height:fit-content;
 }
