--- a/pepperoni.css
+++ b/pepperoni.css
@@ -1,10 +1,10 @@
 body{
     background-image: url("images/pizzabg.jpg");
     background-size: contain;
+    b
     background-repeat: no-repeat;
-    height: fit-content;
+    height: 90vh;
+    width: 98%;
 }
 
-#form1{
-    
-}
+
